Fix Java 8 compatibility: toList->collect, isBlank->trim.isEmpty, orElseThrow with supplier